# LazyQMK

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  HOMEBREW_SETUP.md  LICENSE  NOTICE  QUICKSTART.md  README.md  SETTINGS_MANAGER_USAGE.md  TUI_ARCHITECTURE_GUIDE.md  WAVE_4C_SUMMARY.md  WAVE_8_PROGRESS.md  WORKSPACE_CONFIGURATION.md  baseline_warnings.txt  build.rs  docker-compose.yml  docker-entrypoint.sh  opencode.json  readme.draft.md  test_encoder_gen.txt  test_encoder_output.sh  test_layout.md
.agents/lazyqmk/: SKILL.md
.beads/: AGENT_NOTE.md  config.yaml  dolt-server.activity  issues.jsonl  last-touched  metadata.json  migration-guide.md  spec-completion-dates.md
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.github/workflows/: ci.yml  release.yml
.opencode/agents/: coder-high.md  coder-low.md  coder-mid.md
.pi-handoff/: README.md  deferred-issues.md  prompt-01-plan.md  prompt-02-implement.md
.pi-subagents/artifacts/: 17866948-0328-4f1c-a895-f2ab7f72d3ac_pi-orchestrator.coder-low-minimax_input.md  17866948-0328-4f1c-a895-f2ab7f72d3ac_pi-orchestrator.coder-low-minimax_meta.json  17866948-0328-4f1c-a895-f2ab7f72d3ac_pi-orchestrator.coder-low-minimax_output.md  17866948-0328-4f1c-a895-f2ab7f72d3ac_pi-orchestrator.coder-low-minimax_transcript.jsonl  45680d0b_pi-orchestrator.reviewer-minimax_0_input.md  45680d0b_pi-orchestrator.reviewer-minimax_0_meta.json  45680d0b_pi-orchestrator.reviewer-minimax_0_output.md  45680d0b_pi-orchestrator.reviewer-minimax_0_transcript.jsonl  45680d0b_pi-orchestrator.reviewer-minimax_1_input.md  45680d0b_pi-orchestrator.reviewer-minimax_1_meta.json  45680d0b_pi-orchestrator.reviewer-minimax_1_output.md  45680d0b_pi-orchestrator.reviewer-minimax_1_transcript.jsonl  45680d0b_pi-orchestrator.reviewer-minimax_2_input.md  45680d0b_pi-orchestrator.reviewer-minimax_2_meta.json  45680d0b_pi-orchestrator.reviewer-minimax_2_output.md  45680d0b_pi-orchestrator.reviewer-minimax_2_transcript.jsonl  48212f2e-5716-4867-abbb-72d55be9175a_pi-orchestrator.coder-mid-minimax_input.md  48212f2e-5716-4867-abbb-72d55be9175a_pi-orchestrator.coder-mid-minimax_meta.json  48212f2e-5716-4867-abbb-72d55be9175a_pi-orchestrator.coder-mid-minimax_output.md  48212f2e-5716-4867-abbb-72d55be9175a_pi-orchestrator.coder-mid-minimax_transcript.jsonl  60979508-71bd-4b3a-812e-2c08191892f9_pi-orchestrator.coder-mid-minimax_input.md  60979508-71bd-4b3a-812e-2c08191892f9_pi-orchestrator.coder-mid-minimax_meta.json  60979508-71bd-4b3a-812e-2c08191892f9_pi-orchestrator.coder-mid-minimax_output.md  60979508-71bd-4b3a-812e-2c08191892f9_pi-orchestrator.coder-mid-minimax_transcript.jsonl  692403a7_pi-orchestrator.reviewer-minimax_0_input.md  692403a7_pi-orchestrator.reviewer-minimax_0_meta.json  692403a7_pi-orchestrator.reviewer-minimax_0_output.md  692403a7_pi-orchestrator.reviewer-minimax_0_transcript.jsonl  78b8b5d4_pi-orchestrator.coder-mid-minimax_0_input.md  78b8b5d4_pi-orchestrator.coder-mid-minimax_0_meta.json  78b8b5d4_pi-orchestrator.coder-mid-minimax_0_transcript.jsonl  7aa7aaea-2063-4e04-8eaf-bd052413ae0a_pi-orchestrator.coder-mid-minimax_input.md  7aa7aaea-2063-4e04-8eaf-bd052413ae0a_pi-orchestrator.coder-mid-minimax_meta.json  7aa7aaea-2063-4e04-8eaf-bd052413ae0a_pi-orchestrator.coder-mid-minimax_transcript.jsonl  8a6a506e_pi-orchestrator.reviewer-minimax_0_input.md  8a6a506e_pi-orchestrator.reviewer-minimax_0_meta.json  8a6a506e_pi-orchestrator.reviewer-minimax_0_output.md  8a6a506e_pi-orchestrator.reviewer-minimax_0_transcript.jsonl  8a6a506e_pi-orchestrator.reviewer-minimax_1_input.md  8a6a506e_pi-orchestrator.reviewer-minimax_1_meta.json  (+18 more)
.pi/chains/: implement-and-review-minimax.chain.json
.specify/memory/: constitution.md
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  BRANDING.md  BUILD.md  CROSS_SURFACE_UX_CONVENTIONS.md  DEPLOY.md  DOCKER_BUILD.md  DOCKER_QMK_SETUP.md  FEATURES.md  PALETTEFX.md  QMK_EDITOR.md  README.md  RIPPLE_FEATURE.md  RIPPLE_VALIDATION.md  SHORTCUT_SYSTEM_ANALYSIS.md  TESTING.md  TUI_REFACTOR_NOTE.md  WEB_DEPLOYMENT.md  WEB_FEATURES.md  WEB_UI_REFACTOR_NOTE.md  WEB_UI_ROUTE_VERIFICATION.md
examples/: corne_choc_pro_layout.json  corne_choc_pro_layout.md
scripts/: check-style.sh  generate-release-notes.sh
specs/: startup_errors.md
specs/001-tui-complete-features/: quickstart.md  spec.md  tasks.md
specs/002-fix-startup-warnings/: COMPLETION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-theme-consistency/: QUICKSTART.md  TESTING.md  spec.md  tasks.md
specs/004-config-merger-fix/: README.md  error-analysis.md  implementation-plan.md  spec.md
specs/004-variant-path-fix/: implementation-plan.md  spec.md
specs/005-per-key-rgb-export/: plan.md  spec.md  tasks.md
specs/005-rgb-layout-colors/: led-mapping-findings.md  spec.md
specs/006-layer-popup/: spec.md
specs/008-layer-aware-rgb/: plan.md  spec.md  tasks.md
specs/009-complete-qmk-keycodes/: spec.md  tasks.md
specs/011-tap-hold-settings/: spec.md  (+1 more)
src/: branding.rs  config.rs  constants.rs  lib.rs  main.rs  shortcuts.rs
tests/: REPRODUCTION_TD_PICKER_FLOW.md  cli_category_tests.rs  cli_config_tests.rs  cli_export_tests.rs  cli_generate_tests.rs  cli_help_tests.rs  cli_inspect_tests.rs  cli_keycode_tests.rs  cli_keycodes_tests.rs  cli_layer_refs_tests.rs  cli_qmk_tests.rs  cli_tap_dance_tests.rs  cli_template_tests.rs  cli_validate_tests.rs  doctor_tests.rs  firmware_gen_tests.rs  layer_navigation_tests.rs  layer_refs_tests.rs  qmk_info_json_tests.rs  tap_dance_keycode_picker_flow.rs  tap_dance_tests.rs  web_api_tests.rs
web/: DEV_SCRIPT.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING.md  PREVIEW_FEATURES_IMPLEMENTATION.md  README.md  SETUP.md  SVELTE_WARNINGS.md  TEST_NOTE.md  VITE_DEV_FIXES.md  dev.mjs  dev.test.mjs  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
web/src-tauri/: Cargo.toml
(+445 files in other folders)
