[package]
name = "keyboard_tui"
version = "0.1.0"
edition = "2021"
authors = ["Keyboard TUI Contributors"]
description = "Terminal-based keyboard layout editor for mechanical keyboards"
license = "MIT"
repository = "https://github.com/yourusername/keyboard_tui"
readme = "README.md"
keywords = ["keyboard", "qmk", "tui", "terminal", "editor"]
categories = ["command-line-utilities", "text-editors"]

[features]
default = ["ratatui"]
ratatui = ["dep:ratatui"]

[dependencies]
ratatui = { version = "0.26", optional = true }
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
regex = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Clippy configuration
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict for this project
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
