[package]
name = "lazyqmk-desktop"
version = "0.1.0"
description = "LazyQMK Desktop Application"
authors = ["LazyQMK Contributors"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "lazyqmk_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "net", "time", "sync", "macros"] }
anyhow = "1.0"
which = "7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
